error_templates/java/test_files/parse_end_of_file_error/test.txt
template: "Java.ParseEndOfFileError"
---
EOF.java:4: error: reached end of file while parsing
    }
     ^
1 error
===
template: "Java.ParseEndOfFileError"
---
The compiler was not able to compile your program because of an incomplete syntax
